header only html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,68 @@
 </head>
 <body>
     
+    <div class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a class="logo" href="#">
+                    <img src="images/logo.svg" alt="logo image">
+                </a>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">
+                                HOME
+                            </a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">
+                                SHOP
+                            </a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">
+                                PAGE
+                            </a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">
+                                BLOG
+                            </a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">
+                                CONTACT
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="user-nav">
+                    <a class="user-nav__link" href="#">
+                        <img src="images/user.svg" alt="user images">
+                    </a>
+                    <a class="user-nav__link" href="#">
+                        <img src="images/search.svg" alt="search images">
+                    </a>
+                    <a class="user-nav__link" href="#">
+                        <img src="images/heart-icon.svg" alt="heart-icon images">
+                    </a>
+                    <a class="user-nav__link" href="#">
+                        <img src="images/heart-icon.svg" alt="heart-icon images">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <main class="main"></main>
+
+
+
+    <footer class="footer">
+
+    </footer>
     
 
     <script src="js/main.js"></script>
