--- a/index.html
+++ b/index.html
@@ -68,7 +68,24 @@
 
 
     <footer class="footer">
-
+        <div class="container">
+            <div class="footer-top">
+                <div class="footer-top-item">
+                    <a class="logo" href="#">
+                        <img src="images/logo.svg" alt="footer logo">
+                    </a>
+                    <a class="address" href="#">
+                        No. 342 - London Oxford Street, 012 United States
+                    </a>
+                    <a class="email" href="mailto:youremail@gmail.com">
+                        Youremail@gmail.com
+                    </a>
+                    <a class="phone" href="tel:+02838388393">
+                        +0283 838 8393
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
     
 
