--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                         <img src="images/search.svg" alt="search images">
                     </a>
                     <a class="user-nav__link" href="#">
-                        <img src="images/heart-icon.svg" alt="heart-icon images">
+                        <img src="images/heart_icon.svg" alt="heart-icon images">
                     </a>
                     <a class="user-nav__link" href="#">
-                        <img src="images/heart-icon.svg" alt="heart-icon images">
+                        <img src="images/heart_icon.svg" alt="heart-icon images">
                     </a>
                 </div>
             </div>
@@ -70,7 +70,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-top">
-                <div class="footer-top-item">
+                <div class="footer-top-item footer-top__contact">
                     <a class="logo" href="#">
                         <img src="images/logo.svg" alt="footer logo">
                     </a>
@@ -83,8 +83,119 @@
                     <a class="phone" href="tel:+02838388393">
                         +0283 838 8393
                     </a>
+                    <ul class="footer-top__social-list">
+                        <li class="footer-top__social-item">
+                            <a class="footer-top__social-link" href="#">
+                                <img src="images/footer/facebook.svg" alt="facebook icon">
+                            </a>
+                        </li>
+                        <li class="footer-top__social-item">
+                            <a class="footer-top__social-link" href="#">
+                                <img src="images/footer/twitter.svg" alt="twitter icon">
+                            </a>
+                        </li>
+                        <li class="footer-top__social-item">
+                            <a class="footer-top__social-link" href="#">
+                                <img src="images/footer/linkedin.svg" alt="linkedin icon">
+                            </a>
+                        </li>
+                        <li class="footer-top__social-item">
+                            <a class="footer-top__social-link" href="#">
+                                <img src="images/footer/google.svg" alt="google icon">
+                            </a>
+                        </li>
+                        <li class="footer-top__social-item">
+                            <a class="footer-top__social-link" href="#">
+                                <img src="images/footer/pinterest-p.svg" alt="pinterest icon">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
+                <div class="footer-top-item footer-top__nav">
+                    <h6 class="footer-top__title">
+                        Useful Links
+                    </h6>
+                    <ul class="footer-top__list">
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link"  href="#">
+                                About Us
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link"  href="#">
+                                Privacy & Policy
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link"  href="#">
+                                Terms & Conditions
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link"  href="#">
+                                Contact Us
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link"  href="#">
+                                Help & Support
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer-top-item">
+                    <h6 class="footer-top__title">
+                        My Account
+                    </h6>
+                    <ul class="footer-top__list">
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link" href="#">
+                                My Account
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link" href="#">
+                                My Cart
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link" href="#">
+                                My Wishlist
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link" href="#">
+                                Registration
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__list-link" href="#">
+                                Check Out
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer-top-item footer-top-item-form">
+                    <h6 class="footer-top__title">
+                        Subscribe Our Newsletter
+                    </h6>
+                    <p class="footer-top__text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere expedita pariatur molestiae deserunt provident. Voluptates, quisquam. Quis veniam vero amet necessitatibus assumenda voluptatibus mollitia ipsa quisquam atque, facilis non accusantium?
+                    </p>
+
+                    <form class="footer-top__form" action="#">
+                        <input class="footer-top__form-input" type="email" placeholder="You email address" required>
+                        <button class="footer-top__form-btn" type="submit">
+                            Subscribe
+                        </button>
+                    </form>
+                </div>
+
+
             </div>
+     
         </div>
     </footer>
     
